# derek-banas-software-architecture

./: .env.example  .gitignore  CMakeLists.txt  Dockerfile  README.md  clean-build-files.sh  docker-compose.yml
.github/workflows/: cmake-multi-platform.yml
0001-design-patterns-video-tutorial-1/: Dockerfile  LECTURE_NOTES.md  README.md  docker-compose.yml
0001-design-patterns-video-tutorial-1/src/: Animal.cpp  Bird.h  CMakeLists.txt  Dog.h  main.cpp
0001-design-patterns-video-tutorial-1/uml/: Documentation.mdj
projects/0001-design-patterns-video-tutorial-1/src/: Animal.h  AnimalTest.cpp  Bird.cpp  CMakeLists.txt  Dog.cpp
projects/0001-design-patterns-video-tutorial-1/uml/: Documentation.mdj
