cmake_minimum_required(VERSION 3.10)

project(DesignPatterns)

# Include subprojects
add_subdirectory(projects/0001-design-patterns-video-tutorial-1/src)
# add_subdirectory(projects/0002-design-patterns-video-tutorial-2)
# add_subdirectory(projects/0003-strategy-design-pattern)
# add_subdirectory(projects/0004-observer-design-pattern)

